# ModernCppCourse

./: .gitignore  README.md
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_2/task_1/: CMakeLists.txt  cpplint.py
homework_2/task_1/src/: main.cpp
homework_2/task_2/: CMakeLists.txt
homework_2/task_2/src/: main.cpp
homework_3/: CMakeLists.txt  build.sh  test.html
homework_3/include/: main.hpp
homework_3/src/: html_writer.cpp  image_browser.cpp  main.cpp
homework_3/test/: a.out  test.cpp
homework_4/tests/: CMakeLists.txt  homework_4.h  homework_4_test  ipb_algorithm.cpp  test_ipb_algorithm.cpp  test_main.cpp  test_named_vector.cpp
homework_5/: .gitignore
homework_5/include/: convert_dataset.hpp  homework_5.h
homework_5/src/: convert_dataset.cpp  serialize.cpp
homework_5/tests/: CMakeLists.txt  sifts_internal.cpp  test_convert_dataset.cpp  test_main.cpp  test_serialize.cpp
homework_6/: CMakeLists.txt
homework_6/include/: homework_6.h  image.hpp
homework_6/io_tools/: CMakeLists.txt  image.cpp
homework_6/tests/: CMakeLists.txt  test_from_file.cpp  test_histogram.cpp  test_init.cpp  test_resize.cpp
homework_7/include/: bowdictionary.hpp  convert_dataset.hpp  homework_7.h  kmeans.hpp  serialize.hpp
homework_7/src/: bowdictionary.cpp  convert_dataset.cpp  kmeans.cpp  serialize.cpp
homework_7/tests/: CMakeLists.txt  test_bow_dictionary.cpp  test_kmeans.cpp
homework_8/task_1/: stack_limit.cpp
homework_8/task_2/: CMakeLists.txt
homework_8/task_2/include/: homework_8.h  image.hpp
homework_8/task_2/include/io_strategies/: png_strategy.hpp  ppm_strategy.hpp  strategy.hpp
homework_8/task_2/src/: CMakeLists.txt  image.cpp  png_strategy.cpp  ppm_strategy.cpp
homework_8/task_2/tests/: .clang-tidy  CMakeLists.txt  test_from_png.cpp  test_from_ppm.cpp  test_init.cpp  test_resize.cpp
homework_9/: CMakeLists.txt
homework_9/include/: bowdictionary.hpp  histogram.hpp  homework_9.h  kmeans.hpp
homework_9/src/bow_dictionary/: CMakeLists.txt  bowdictionary.cpp  kmeans.cpp
homework_9/src/histogram/: CMakeLists.txt  histogram.cpp
homework_9/tests/: test_dictionary.cpp  test_histograms.cpp
